PharmaBackend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharma-backend
  namespace: pharma
spec:
  type: ClusterIP
  selector:
    app: pharma-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
