PharmaBackend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharma-backend
  namespace: pharma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - __HOSTNAME__
      secretName: pharma-backend-tls
  rules:
    - host: __HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pharma-backend
                port:
                  number: 80
